# enum-from

./: BUILD.bazel  Cargo.bazel.toml  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: run-tests.yaml
src/: lib.rs
tests/: integration_test.rs
