module(name = "enum-from", version = "0.1.0")

bazel_dep(name = "rules_rust", version = "0.48.0")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    isolate = True
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "Cargo.lock",
    manifests = ["//:Cargo.bazel.toml"],
)
crate.annotation(
      crate = "proc-macro2",
      crate_features = [
            "proc-macro"
      ]
)
crate.annotation(
      crate = "syn",
      crate_features = [
            "full"
      ]
)
use_repo(crate, "crates")
